--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
     <div class="container">
         <h1 class="text">Algoritimos</h1>
-        <a href="./Pong/Pong.rar" download="./Pong/Pong.rar" class="text">Pong-Download</a>
-        <a href="./Projetos.rar" download="./Projetos.rar" class="text">Projetos</a>
+        <a href="./Pong/Pong.rar" download="Pong.rar" class="text">Pong-Download</a>
+        <a href="./Projetos.rar" download="Projetos.rar" class="text">Projetos</a>
     </div>
     
 </body>
