--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
     <div class="container">
         <h1 class="text">Algoritimos</h1>
         <a href="./Pong/Pong.rar" download="Pong.rar" class="text">Pong-Download</a>
-        <a href="./Projetos.rar" download="Projetos.rar" class="text">Projetos</a>
+        <a href="./Projetos.rar" download="Projetos.rar" class="text">Projetos-Download</a>
     </div>
     
 </body>
