--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritimos</title>
+    <title>Algoritmos</title>
     <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
     <style>
         body{
@@ -17,6 +17,7 @@
         }
         .container{
             border: 5px solid rgb(39, 0, 0);
+            border-radius: 50px;
             text-align: center;
             background-color: white;
             padding: 10px;
